--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/headtrack.css">
 
-    <!-- Three.js -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
+    <!-- Import Map for Three.js (Modern / Module based) -->
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+            }
+        }
+    </script>
 
-    <!-- MediaPipe Face Detection -->
+    <!-- MediaPipe Face Detection (Still global) -->
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection/face_detection.js"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
@@ -28,10 +35,11 @@
     <div class="bg-gradient"></div>
 
     <!-- Camera Preview (small in corner) -->
+    <!-- Camera Preview (small in corner) -->
     <div class="camera-container">
         <div class="fps-counter" id="fps-counter">0 FPS</div>
         <video id="camera-feed" autoplay playsinline></video>
-        <div class="camera-label">Kamera</div>
+        <div class="camera-label">Camera</div>
         <canvas id="face-canvas"></canvas>
     </div>
 
@@ -56,26 +64,27 @@
         </div>
     </div>
 
-    <!-- Instructions -->
-    <div class="instructions" id="instructions" style="display: none;">
-        <p>Move your head <strong>left, right, up, down</strong> to see the 3D box effect</p>
-    </div>
+    <!-- Instructions (Now 3D) -->
+    <!-- <div class="instructions" id="instructions" style="display: none;">
+        <p>Move your head <strong>left, right, up, down</strong> to see the 3D box effect.<br>Press <strong>'K'</strong>
+            to toggle controls.</p>
+    </div> -->
 
     <!-- Controls Panel - Simplified -->
     <div class="sensitivity-controls" id="sensitivity-controls" style="display: none;">
         <!-- Effect Strength -->
         <div class="control-group">
-            <div class="sensitivity-label">Stärke</div>
+            <div class="sensitivity-label">Strength</div>
             <div class="sensitivity-buttons">
                 <button id="strength-minus" class="sensitivity-btn">−</button>
-                <span id="strength-value">0.40</span>
+                <span id="strength-value">0.20</span>
                 <button id="strength-plus" class="sensitivity-btn">+</button>
             </div>
         </div>
 
         <!-- Smoothing -->
         <div class="control-group">
-            <div class="sensitivity-label">Glättung</div>
+            <div class="sensitivity-label">Smoothing</div>
             <div class="sensitivity-buttons">
                 <button id="smoothing-minus" class="sensitivity-btn">−</button>
                 <span id="smoothing-value">0.15</span>
@@ -83,19 +92,91 @@
             </div>
         </div>
 
-        <!-- Hexagon Z Position -->
+        <!-- Model Scale -->
         <div class="control-group">
-            <div class="sensitivity-label">Tiefe (Z)</div>
+            <div class="sensitivity-label">Size</div>
             <div class="sensitivity-buttons">
-                <button id="zpos-minus" class="sensitivity-btn">−</button>
-                <span id="zpos-value">1.0</span>
-                <button id="zpos-plus" class="sensitivity-btn">+</button>
+                <button id="scale-minus" class="sensitivity-btn">−</button>
+                <span id="scale-value">1.0</span>
+                <button id="scale-plus" class="sensitivity-btn">+</button>
+            </div>
+        </div>
+
+        <!-- Position X -->
+        <div class="control-group">
+            <div class="sensitivity-label">Pos X</div>
+            <div class="sensitivity-buttons">
+                <button id="pos-x-minus" class="sensitivity-btn">−</button>
+                <span id="pos-x-value">0.10</span>
+                <button id="pos-x-plus" class="sensitivity-btn">+</button>
+            </div>
+        </div>
+
+        <!-- Position Y -->
+        <div class="control-group">
+            <div class="sensitivity-label">Pos Y</div>
+            <div class="sensitivity-buttons">
+                <button id="pos-y-minus" class="sensitivity-btn">−</button>
+                <span id="pos-y-value">0.40</span>
+                <button id="pos-y-plus" class="sensitivity-btn">+</button>
+            </div>
+        </div>
+
+        <!-- Position Z -->
+        <div class="control-group">
+            <div class="sensitivity-label">Pos Z (Depth)</div>
+            <div class="sensitivity-buttons">
+                <button id="pos-z-minus" class="sensitivity-btn">−</button>
+                <span id="pos-z-value">1.40</span>
+                <button id="pos-z-plus" class="sensitivity-btn">+</button>
+            </div>
+        </div>
+
+        <!-- Frame Width -->
+        <div class="control-group">
+            <div class="sensitivity-label">Frame (Width)</div>
+            <div class="sensitivity-buttons">
+                <button id="frame-w-minus" class="sensitivity-btn">−</button>
+                <span id="frame-w-value">0.00</span>
+                <button id="frame-w-plus" class="sensitivity-btn">+</button>
+            </div>
+        </div>
+
+        <!-- Frame Color -->
+        <div class="control-group">
+            <div class="sensitivity-label">Frame Color</div>
+            <input type="color" id="frame-color" value="#a855f7"
+                style="width: 100%; height: 30px; border: none; cursor: pointer;">
+        </div>
+
+        <!-- Upload Button -->
+        <div class="control-group" style="margin-top: 10px;">
+            <label for="model-upload" class="btn-primary" style="font-size: 12px; padding: 8px 16px; cursor: pointer;">
+                Upload GLB
+            </label>
+            <input type="file" id="model-upload" accept=".glb,.gltf" style="display: none;">
+        </div>
+    </div>
+
+    <!-- Visitor Counter -->
+    <div class="visitor-counter">
+        <div class="counter-frame">
+            <span class="counter-label">Visitors:</span>
+            <div class="counter-display">
+                <span class="counter-number loading" id="visitor-count">...</span>
             </div>
         </div>
     </div>
 
-    <!-- Script -->
-    <script src="js/headtrack.js"></script>
+    <!-- Repository Link -->
+    <a href="https://github.com/ARDings/3DWindow" target="_blank" class="repo-link"
+        style="position: absolute; bottom: 10px; left: 20px; color: rgba(255, 255, 255, 0.5); font-family: 'Inter', sans-serif; font-size: 12px; text-decoration: none; z-index: 100;">
+        https://github.com/ARDings/3DWindow
+    </a>
+
+    <!-- Script (Module) -->
+    <script src="js/counter.js"></script>
+    <script type="module" src="js/headtrack.js"></script>
 </body>
 
 </html>
